site/docs/v0.2.0/zh/components/task-pane.mdx
# 任务窗格

任务窗格在当前编辑器旁承载上下文属性、评论、导航与智能助手工作流。

<Preview>
  <div
    class="relative flex h-80 w-full overflow-hidden border border-border bg-[var(--a3s-bg)]"
    data-task-pane-host
  >
    <div
      class="grid min-w-0 flex-1 place-items-center p-6 text-sm text-muted-foreground"
      data-editor-canvas
    >
      编辑器画布
    </div>
    <aside class="task-pane" data-responsive="overlay">
      <header>
        <h2>页面设置</h2>
        <button
          type="button"
          class="btn"
          data-size="icon-xs"
          data-variant="ghost"
          aria-label="关闭页面设置"
        >
          ×
        </button>
      </header>
      <section>
        <div class="field">
          <label for="task-pane-paper-zh">纸张大小</label>
          <select id="task-pane-paper-zh">
            <option value="a4">A4</option>
            <option value="letter">Letter</option>
          </select>
          <p>210 × 297 mm</p>
        </div>
        <div class="field mt-4">
          <label for="task-pane-margin-zh">页边距</label>
          <select id="task-pane-margin-zh">
            <option value="normal">普通</option>
            <option value="narrow">窄</option>
          </select>
        </div>
      </section>
      <footer>
        <button type="button" class="btn" data-size="sm" data-variant="outline">
          重置
        </button>
        <button type="button" class="btn" data-size="sm">
          应用
        </button>
      </footer>
    </aside>
  </div>
</Preview>

## Usage

```html
<div class="relative"><!-- 建立覆盖定位上下文 -->
<aside class="task-pane" data-responsive="overlay">
  <header>
    <h2>属性</h2>
    ...
  </header>
  <section>...</section>
  <footer>...</footer>
</aside>
</div>
```

### Parameters

| 参数                    | 必填 | 用途                       |
| ----------------------- | ---- | -------------------------- |
| 语义化 `header`         | 推荐 | 标题、关闭或更多操作       |
| 语义化 `section`        | 是   | 可滚动的窗格内容           |
| 语义化 `footer`         | 否   | 持续显示的操作             |
| `data-responsive="overlay"` | 否 | 高于 `56.25rem` 共享工作区宽度，低于该值时覆盖，低于 `32.5rem` 时占满宿主 |
| `--task-pane-width`     | 否   | 窗格宽度，默认 `clamp(20rem, 28vw, 23.75rem)` |
| `--task-pane-min-width` | 否   | 共享布局的最小宽度，默认 `18.75rem` |
| `--task-pane-overlay-width` | 否 | 覆盖层宽度，默认 `23.75rem` |
| `--task-pane-overlay-z-index` | 否 | 覆盖层层级，默认 `20` |

## States and variants

宿主应用负责决定窗格是挂载还是放入 Split Pane。需要 Office 响应式行为时添加 `data-responsive="overlay"`：900 像素以上与工作区共享宽度，900 像素以下在行内末端覆盖，520 像素以下占满工作区。宿主必须建立定位上下文，通常使用 `position: relative`。

## Accessibility

窗格作为编辑器补充内容时使用 `<aside>`，并通过标题提供稳定名称。关闭后应把焦点返回打开窗格的控件。
